--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^18.15.10",
     "@types/winston": "^2.4.4",
     "@types/ws": "^8.5.4",
     "nodemon": "^2.0.22",
